# whatsapp_parser

./: LICENSE  README.md  README.pt.md  cli.py  dataviz.py  etl.py  main.py  pyproject.toml  read_data.py  requirements.txt  utils.py
configs/: default_config.yaml  example_config.yaml  example_map_contacts.yaml
